--- a/ExtentSparkReporter spark = new ExtentSparkReporter("test-output/ExtentReports/ExtentReport.html
+++ b/ExtentSparkReporter spark = new ExtentSparkReporter("test-output/ExtentReports/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Apr 23, 2025 07:57:35 pm</span></a>
+<a href="#"><span class="badge badge-primary">Apr 29, 2025 05:24:25 pm</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">DeleteAgent</p>
+            <p class="name">AddCredits</p>
             <p class="text-sm">
-              <span>7:57:35 pm</span> / <span>00:00:02:441</span>
+              <span>5:24:28 pm</span> / <span>00:00:00:701</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">DeleteAgent</h5>
-<span class='badge badge-success'>04.23.2025 7:57:35 pm</span>
-<span class='badge badge-danger'>04.23.2025 7:57:37 pm</span>
-<span class='badge badge-default'>00:00:02:441</span>
+<h5 class="test-status text-pass">AddCredits</h5>
+<span class='badge badge-success'>04.29.2025 5:24:28 pm</span>
+<span class='badge badge-danger'>04.29.2025 5:24:29 pm</span>
+<span class='badge badge-default'>00:00:00:701</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>7:57:37 pm</td>
+        <td>5:24:29 pm</td>
         <td>
           Test Passed
         </td>
@@ -128,13 +128,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Apr 23, 2025 07:57:35 pm</h3>
+<h3>Apr 29, 2025 05:24:25 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Apr 23, 2025 07:57:37 pm</h3>
+<h3>Apr 29, 2025 05:24:29 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -204,7 +204,7 @@
 </div></div>
 <script>
 var timeline = {
-"DeleteAgent":2.441
+"AddCredits":0.701
 };
 </script>
 <div class="row">
