--- a/test-output/ExtentReports/ExtentReport.html
+++ b/test-output/ExtentReports/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Apr 18, 2025 06:52:49 pm</span></a>
+<a href="#"><span class="badge badge-primary">May 2, 2025 04:48:11 pm</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">CPI_UpdateAgent_</p>
+            <p class="name">getQuotes</p>
             <p class="text-sm">
-              <span>6:52:49 pm</span> / <span>00:00:01:319</span>
+              <span>4:48:14 pm</span> / <span>00:00:00:873</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">CPI_UpdateAgent_</h5>
-<span class='badge badge-success'>04.18.2025 6:52:49 pm</span>
-<span class='badge badge-danger'>04.18.2025 6:52:50 pm</span>
-<span class='badge badge-default'>00:00:01:319</span>
+<h5 class="test-status text-pass">getQuotes</h5>
+<span class='badge badge-success'>05.02.2025 4:48:14 pm</span>
+<span class='badge badge-danger'>05.02.2025 4:48:15 pm</span>
+<span class='badge badge-default'>00:00:00:873</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>6:52:50 pm</td>
+        <td>4:48:15 pm</td>
         <td>
           Test Passed
         </td>
@@ -128,13 +128,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Apr 18, 2025 06:52:49 pm</h3>
+<h3>May 2, 2025 04:48:11 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Apr 18, 2025 06:52:51 pm</h3>
+<h3>May 2, 2025 04:48:15 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -204,7 +204,7 @@
 </div></div>
 <script>
 var timeline = {
-"CPI_UpdateAgent_":1.319
+"getQuotes":0.873
 };
 </script>
 <div class="row">
